--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,13 +1,3 @@
 <h2>
-	<!--
-	<a href="register.html">Comments</a>&nbsp;&nbsp;&nbsp;&nbsp;
-	-->
-<!--	<a href="/">Birthday!</a>&nbsp;&nbsp;&nbsp;  -->
-<!--	<a href="blog.html">Log</a>&nbsp;&nbsp;&nbsp;  -->
-	<a href="johnny.html">Johnny</a>&nbsp;&nbsp;&nbsp;
-	<a href="index.html">Log</a>&nbsp;&nbsp;&nbsp;
-<!-- 	<a href="year2.html">Year 2</a>&nbsp;&nbsp;&nbsp; -->	
-	<a href="year1.html">Year 1</a>&nbsp;&nbsp;&nbsp;
-	<a href="video.html">Videos</a>&nbsp;&nbsp;&nbsp;
-	<a href="map.html">Map</a>
+	<a href="slideshow.html">Slideshow</a>&nbsp;&nbsp;&nbsp;
 </h2>
