--- a/_layouts/default-first.html
+++ b/_layouts/default-first.html
@@ -6,9 +6,13 @@
 <link rel="apple-touch-icon" href="/ducky-iphone.png" />
 <link rel="shortcut icon" href="/favicon.ico" />
 
-<link rel="stylesheet" type="text/css" href="css/style.css" />
-
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+
+<script type="text/javascript" src="/js/jquery.maximage.min.js"></script>
+<script type="text/javascript" src="/js/jquery.cycle.all.js"></script>
+
+<link rel="stylesheet" type="text/css" href="/css/style.css" />
+<link rel="stylesheet" type="text/css" href="/css/jquery.maximage.min.css" />
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -25,12 +29,7 @@
 <body>
 
 <div id="Content">
-
-
 <h1 id="headline" data-org="Remembering Johnny">Remembering Johnny</h1>
-
-{% include nav.html %}
-
 {{page.content}}
 </div>
 
