--- a/_layouts/slideshow.html
+++ b/_layouts/slideshow.html
@@ -3,6 +3,12 @@
 <head>
 <title>Remembering Johnny</title>
 <meta charset="utf-8" />
+
+<meta property="og:title" content="Remembering Johnny" />
+<meta property="og:url" content="http://www.johnnycelaire.com/slideshow.html" />
+<meta property="og:image" content="/johnny/Typical-johnny-stare-cropped.jpg" />
+
+
 <link rel="apple-touch-icon" href="/ducky-iphone.png" />
 <link rel="shortcut icon" href="/favicon.ico" />
 
