--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,14 @@
 <head>
 <title>Remembering Johnny</title>
 <meta charset="utf-8" />
+
 <link rel="apple-touch-icon" href="/ducky-iphone.png" />
+
+<meta property="og:title" content="Remembering Johnny" />
+<meta property="og:url" content="http://www.johnnycelaire.com/" />
+<meta property="og:image" content="/johnny/Typical-johnny-stare-cropped.jpg" />
+
+
 <link rel="shortcut icon" href="/favicon.ico" />
 
 <link rel="stylesheet" type="text/css" href="css/style.css" />
