--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ p {
 }
 
 #Content {
-	width:740px;
+	width:100%;
 	margin:0px auto;
 	text-align:left;
 	padding:20px 40px 20px 40px;
@@ -77,7 +77,7 @@ p {
 	color:white;
 	background-image:url('../images/pink-bkg1460.png');
 	background-repeat:repeat-y;
-	background-size:732px 237px;
+	background-size:100% 237px;
 	
 	
      -moz-border-radius: 20px;
@@ -94,7 +94,7 @@ p {
 }
 
 img {
-	width: 640px;
+	width: 100%;
 	height: auto !important;
 	max-width: 100%;
 	-moz-border-radius: 20px;
