no dots on slideshow and the pink bg is gone

--- a/css/style.css
+++ b/css/style.css
@@ -75,10 +75,11 @@ p {
 	background-color: #666666;
 	
 	color:white;
+/*	
 	background-image:url('../images/pink-bkg1460.png');
 	background-repeat:repeat-y;
 	background-size:100% 237px;
-	
+*/	
 	
      -moz-border-radius: 20px;
     -webkit-border-radius: 20px;
