fixed broken stuff

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,5 @@
 <h2>
 	<a href="index.html">Home</a>&nbsp;&nbsp;&nbsp;
 	<a href="slideshow.html">Slideshow</a>&nbsp;&nbsp;&nbsp;
-	<a href="memorial.html">Memorial</a>&nbsp;&nbsp;&nbsp;
+	<a href="memorial.html">Canada Memorial</a>&nbsp;&nbsp;&nbsp;
 </h2>
